# Kucheat

./: Cargo.toml  LICENSE  Makefile  README.md
src/: api.rs  autolaunch.rs  config.rs  daemon.rs  main.rs  notification.rs  state.rs  tray.rs
systemd/: kucheat.service
