[package]
name = "kucheat"
version = "0.1.0"
edition = "2024"
description = "CHZZK live stream notification system tray app for Linux"
rust-version = "1.85"

[[bin]]
name = "kucheat"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
notify-rust = "4"
ksni = "0.3"
dirs = "5"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
